# teb

./: .gitignore  CMakeLists.txt  README.md  package.xml  path.txt  todo
config/: sample.yaml
script/: demo_gui.py  new_path.txt  parking1.txt  parking2.txt  path.txt  path_maker.py  testfile.txt
src/common/: make_unique.h  math.h  misc.h  port.h
src/core/: distance_calculations.h  kinematics_error.h  misc.h  normalize_angle.h  obstacle_error.h  obstacles.cc  obstacles.h  pose_se2.h  robot_footprint_model.h  teb_planner.h  types.h
src/qtviewer/: scribblearea.cc  scribblearea.h  window.cc  window.h
src/teb/: distance_calculations.h  normalize_angle.h  obstacles.cc  obstacles.h  optimal_planner.cc  optimal_planner.h  penalties.h  pose_se2.h  robot_footprint_model.h
src/teb/error/: kinematics_car_like_error.h  kinematics_car_like_factor.h  kinematics_diff_drvie_error.h  kinematics_diff_drvie_factor.h  kinematics_error.h  numerical_derivative.h  obstacle_error.h  obstacle_factor.h  time_error.h  time_factor.h  velocity_error.h  velocity_factor.h
src/top/: log_io.h  main.cc
src/transform/: rigid_transform.cc  rigid_transform.h  timestamped_transform.cc  timestamped_transform.h  transform.h
